--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 aniso8601==9.0.1
 asgiref==3.7.2
+cfgv==3.4.0
+distlib==0.3.8
 Django==5.0
+filelock==3.13.1
 graphene==3.3
 graphene-django==3.1.5
 graphql-core==3.2.3
 graphql-relay==3.2.0
+identify==2.5.33
+nodeenv==1.8.0
 Pillow==10.1.0
+platformdirs==4.1.0
+pre-commit==3.6.0
 promise==2.3
+PyYAML==6.0.1
 six==1.16.0
 sqlparse==0.4.4
 text-unidecode==1.3
+virtualenv==20.25.0
