--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Pillow==10.1.0
 platformdirs==4.1.0
 pre-commit==3.6.0
 promise==2.3
+python-dotenv==1.0.0
 PyYAML==6.0.1
 six==1.16.0
 sqlparse==0.4.4
